--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           
           	<h2> Want to become a programmer? </h2>
            	<h2> Think it's easy? </h2>
-           	<br/> <h2 id="warning"> DON'T DO IT! 
+           	<h2 id="warning"> DON'T DO IT! 
            	</h2>
            		<p> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
            			<br/> Constantly want it? 
@@ -27,11 +27,26 @@
 	           			<li><small> Cry. </small></li>
 	           			<li> Improvise. </li>
            			</ol>
-           			You are ready.
-           			<br /> <a href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%B0_%D0%9B%D0%B0%D0%B2%D0%BB%D0%B5%D0%B9%D1%81"><img src="programmer-one.png" alt="Programmer" title="typical programmer" /></a>
+           			<h3>You are ready.</h3>
+           			<a href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%B0_%D0%9B%D0%B0%D0%B2%D0%BB%D0%B5%D0%B9%D1%81"><img src="programmer-one.png" alt="Programmer" title="typical programmer"></a>
            			<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
            			<br /> And, of course you can write me personaly >>
            			<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
+           			<h3> The pros and cons of being a programmer:</h3>
+           			<table border="1" width="30%">
+      					<tr>
+        					<td align="center" valign="top"> You're a clever person </td>
+        					<td align="center" valign="top"><i> You're <a href="geek.png"> geek </a> </i></td>
+      					</tr>
+      					<tr>
+        					<td align="center" valign="top"> You do magic </td>
+        					<td align="center" valign="top"><i> You ate last time last week </i></td>
+      					</tr>
+      					<tr>
+        					<td align="center" valign="top"> You have a big salary </td>
+        					<td align="center" valign="top"><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+      					</tr>
+   					</table>
 
            		</p>
 
