--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
         <head> 
            <title> My first page </title>
+           <style type="text/css">
+            	h3 {font-size: 20px; font-family: times new roman}
+            	h2 {font-size: 25px; font-family: times new roman}
+           </style>
 
         </head> 
 
@@ -10,45 +14,56 @@
           	<h2> Want to become a programmer? </h2>
            	<h2> Think it's easy? </h2>
            	<h2 id="warning"> DON'T DO IT! </h2>
-           		<p> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
-           			<br/> Constantly want it? 
-           			<br/> Okay. 
-           			<br/> Forget about sleep and health Nerven. 
-           			<br /> =) 
-           		</p>
-           	<hr /> 
-           		<p> At first catch obligatory steps:
-           			<ol> 
-	           			<li> Sit down and breathe deeply. </li>
-	           			<li> This is your last chance. 
-	           				<a href="#warning"> Don't do it!!</a> </li>
-	           			<li> Turn on the laptop.</li>
-	           			<li><small> Cry. </small></li>
-	           			<li> Improvise. </li>
-           			</ol>
-           			<h3>You are ready.</h3>
-           			<a href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%B0_%D0%9B%D0%B0%D0%B2%D0%BB%D0%B5%D0%B9%D1%81">
-           			<img src="programmer-one.png" alt="Programmer" title="typical programmer"></a>
-           			<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
-           			<br /> And, of course you can write me personaly >>
-           			<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
-           			<h3> The pros and cons of being a programmer:</h3>
-           			<table border="1" width="30%">
-      					<tr>
-        					<td align="center" valign="top"> You're a clever person </td>
-        					<td align="center" valign="top"><i> You're <a href="geek.png"> geek </a> </i></td>
-      					</tr>
-      					<tr>
-        					<td align="center" valign="top"> You do magic </td>
-        					<td align="center" valign="top"><i> You ate last time last week </i></td>
-      					</tr>
-      					<tr>
-        					<td align="center" valign="top"> You have a big salary </td>
-        					<td align="center" valign="top"><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
-      					</tr>
-   					</table>
-
-           		</p>
+           	<p> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
+           		<br/> Constantly want it? 
+           		<br/> Okay. 
+           		<br/> Forget about sleep and health Nerven. 
+           		<br /> =) 
+           	</p> 
+        <div style="padding: 20px; border: 2px solid #191970;"><p> At first catch obligatory steps:
+           		<ol> 
+	           		<li> Sit down and breathe deeply. </li>
+	           		<li> This is your last chance. 
+	           			<a href="#warning"> Don't do it!!</a> </li>
+	           		<li> Turn on the laptop.</li>
+	           		<li><small> Cry. </small></li>
+	           		<li> Improvise. </li>
+           		</ol>
+           	</p>
+         </div>
+			<h3>You are ready.</h3>
+			<p>
+				<a href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%B0_%D0%9B%D0%B0%D0%B2%D0%BB%D0%B5%D0%B9%D1%81">
+					<img src="programmer-one.png" alt="Programmer" title="typical programmer"/></a>
+				<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
+				<br /> And, of course you can write me personaly >>
+					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
+				<h3> The pros and cons of being a programmer:</h3>
+				<table border="2" width="30%">
+					<tr>
+						<td style="background-color: #F0E68C;" align="center" valign="middle"><b> Pros </b></td>
+						<td style="background-color: #90EE90;" align="center" valign="middle"><b> Cons </b></td>
+						<td style="background-color: #87CEEB;" align="center" valign="middle"><b> Both </b></td>
+					</tr>
+					<tr>
+						<td align="center" valign="middle"> You're a clever person </td>
+						<td align="center" valign="middle"><i> You're <a href="geek.png"> geek </a> </i></td>
+						<td align="center" valign="middle" rowspan="3"> You cry for joy or sum, but always do somethings </td>
+					</tr>
+					<tr>
+						<td align="center" valign="middle"> You do magic </td>
+						<td align="center" valign="middle"><i> You ate last time last week </i></td>
+					</tr>
+					<tr>
+						<td align="center" valign="middle"> You have a big salary </td>
+						<td align="center" valign="middle"><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+					</tr>
+					<tr>
+						<td  align="center" valign="middle" colspan="2"><i> You're unique </i></td>
+						<td align="center" valign="middle"><i> Be doctor is not so bed) </i></td>
+					</tr>
+				</table>
+		</p>
 
         </body> 
 
