initial css added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
         <head> 
            <title> My first page </title>
+           <link rel="stylesheet" type="text/css" href="style.css" />
            <style type="text/css">
             	h3 {font-size: 20px; font-family: times new roman}
             	h2 {font-size: 25px; font-family: times new roman}
@@ -9,7 +10,7 @@
 
         </head> 
 
-        <body style="background-color:#F0FFFF;"> 
+        <body> 
           
           	<h2> Want to become a programmer? </h2>
            	<h2> Think it's easy? </h2>
@@ -60,7 +61,7 @@
 					</tr>
 					<tr>
 						<td  align="center" valign="middle" colspan="2"><i> You're unique </i></td>
-						<td align="center" valign="middle"><i> Be doctor is not so bed) </i></td>
+						<td align="center" valign="middle"><i> Be a doctor is not so bed) </i></td>
 					</tr>
 				</table>
 		</p>
