added background and new form

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
         <head> 
            <title> My first page </title>
            <link rel="stylesheet" type="text/css" href="style.css" />
-           <style type="text/css">
+           <style type="text/css"> 
             	h3 {font-size: 20px; font-family: times new roman}
             	h2 {font-size: 25px; font-family: times new roman}
            </style>
 
         </head> 
 
-        <body> 
+        <body>
+        <div> 
           
           	<h2> Want to become a programmer? </h2>
            	<h2> Think it's easy? </h2>
@@ -21,7 +22,9 @@
            		<br/> Forget about sleep and health Nerven. 
            		<br /> =) 
            	</p> 
-        <div style="padding: 20px; border: 2px solid #191970;"><p> At first catch obligatory steps:
+        <div style="background: rgba(248, 248, 255, 0); padding: 25; width: 300px; height: 16%; 
+			margin: 10px; border: 2px solid #191970;">
+        	<p><b> At first catch obligatory steps: </b>
            		<ol> 
 	           		<li> Sit down and breathe deeply. </li>
 	           		<li> This is your last chance. 
@@ -38,13 +41,13 @@
 					<img src="programmer-one.png" alt="Programmer" title="typical programmer"/></a>
 				<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
 				<br /> And, of course you can write me personaly >>
-					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
-				<h3> The pros and cons of being a programmer:</h3>
-				<table border="2" width="30%">
-					<tr>
-						<td style="background-color: #F0E68C;" align="center" valign="middle"><b> Pros </b></td>
-						<td style="background-color: #90EE90;" align="center" valign="middle"><b> Cons </b></td>
-						<td style="background-color: #87CEEB;" align="center" valign="middle"><b> Both </b></td>
+					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>	
+				<br /><br /><h3> The pros and cons of being a programmer:</h3>
+				<table border="2" width="70%" style="background-color: rgba(210, 105, 30, 0.15)">
+					<tr style="background-color: rgba(210, 105, 30, 0.5)" align="center" valign="middle">
+						<td><b> Pros </b></td>
+						<td><b> Cons </b></td>
+						<td><b> Both </b></td>
 					</tr>
 					<tr>
 						<td align="center" valign="middle"> You're a clever person </td>
@@ -64,8 +67,8 @@
 						<td align="center" valign="middle"><i> Be a doctor is not so bed) </i></td>
 					</tr>
 				</table>
-		</p>
-
+				</p>
+			</div>
         </body> 
 
 </html>
