--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
            		<br/> Forget about sleep and health Nerven. 
            		<br /> =) 
            	</p> 
-        <div style="background: rgba(248, 248, 255, 0); padding: 25; width: 300px; height: 16%; 
-			margin: 10px; border: 2px solid #191970;">
+        <div style="background: 
+        			rgba(248, 248, 255, 0); 
+        			padding: 15;
+        			padding-left: 35;  
+        			width: 37%; 
+        			height: 16%; 
+					margin: 5px; 
+					border: 2px solid #191970;">
         	<p><b> At first catch obligatory steps: </b>
            		<ol> 
 	           		<li> Sit down and breathe deeply. </li>
@@ -37,34 +43,35 @@
          </div>
 			<h3>You are ready.</h3>
 			<p>
-				<a href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%B0_%D0%9B%D0%B0%D0%B2%D0%BB%D0%B5%D0%B9%D1%81">
-					<img src="programmer-one.png" alt="Programmer" title="typical programmer"/></a>
+				<a href="https://tproger.ru/news/">
+					<img src="coder.png" width=30% alt="Programmer" title="typical programmer"/></a>
 				<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
 				<br /> And, of course you can write me personaly >>
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>	
 				<br /><br /><h3> The pros and cons of being a programmer:</h3>
-				<table border="2" width="70%" style="background-color: rgba(210, 105, 30, 0.15)">
+				<table border="2" width="70%" style="background-color: rgba(210, 105, 30, 0.15)" >
 					<tr style="background-color: rgba(210, 105, 30, 0.5)" align="center" valign="middle">
 						<td><b> Pros </b></td>
 						<td><b> Cons </b></td>
-						<td><b> Both </b></td>
+						<td><b> Conclusion </b></td>
 					</tr>
-					<tr>
-						<td align="center" valign="middle"> You're a clever person </td>
-						<td align="center" valign="middle"><i> You're <a href="geek.png"> geek </a> </i></td>
-						<td align="center" valign="middle" rowspan="3"> You cry for joy or sum, but always do somethings </td>
+					<tr align="center" valign="middle">
+						<td> You're a clever person </td>
+						<td><i> You're <a href="geek.png"> geek </a> </i></td>
+						<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
 					</tr>
-					<tr>
-						<td align="center" valign="middle"> You do magic </td>
-						<td align="center" valign="middle"><i> You ate last time last week </i></td>
+					<tr align="center" valign="middle">
+						<td> You do magic </td>
+						<td><i> You ate last time last week </i></td>
 					</tr>
-					<tr>
-						<td align="center" valign="middle"> You have a big salary </td>
-						<td align="center" valign="middle"><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+					<tr align="center" valign="middle">
+						<td> You have a big salary </td>
+						<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+						<td><i> Be a doctor is not so bed) </i></td>
 					</tr>
-					<tr>
-						<td  align="center" valign="middle" colspan="2"><i> You're unique </i></td>
-						<td align="center" valign="middle"><i> Be a doctor is not so bed) </i></td>
+					<tr align="center" valign="middle">
+						<td colspan="2"> You're unique </td>
+						<td> You know that you're on the right path ^^ </td>
 					</tr>
 				</table>
 				</p>
