--- a/index.html
+++ b/index.html
@@ -1,70 +1,76 @@
 
 <html>
-        <head> 
-           <title> My first page </title>
-           <link rel="stylesheet" type="text/css" href="style.css" />
-           <style type="text/css"> 
-            	h3 {font-size: 20px; font-family: times new roman}
-            	h2 {font-size: 25px; font-family: times new roman}
-           </style>
 
-        </head> 
+    <head> 
+       	<title> Programmer's page </title>
+       	<link rel="stylesheet" type="text/css" href="style.css" />
+       	<style type="text/css"> </style>
+    </head> 
 
-        <body>
-        <div> 
-          
-          	<h2> Want to become a programmer? </h2>
-           	<h2> Think it's easy? </h2>
-           	<h2 id="warning"> DON'T DO IT! </h2>
-           	<p> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
-           		<br/> Constantly want it? 
-           		<br/> Okay. 
-           		<br/> Forget about sleep and health Nerven. 
-           		<br /> =) 
-           	</p> 
-        <div style="background: 
-        			rgba(248, 248, 255, 0); 
-        			padding: 15;
-        			padding-left: 35;  
-        			width: 37%; 
-        			height: 16%; 
-					margin: 5px; 
-					border: 2px solid #191970;">
-        	<p><b> At first catch obligatory steps: </b>
-           		<ol> 
-	           		<li> Sit down and breathe deeply. </li>
-	           		<li> This is your last chance. 
-	           			<a href="#warning"> Don't do it!!</a> </li>
-	           		<li> Turn on the laptop.</li>
-	           		<li><small> Cry. </small></li>
-	           		<li> Improvise. </li>
-           		</ol>
-           	</p>
-         </div>
-			<h3>You are ready.</h3>
+    <body>
+    	<div> 
+	      	<h1> Want to become a programmer? </h2>
+	       	<h1> Think it's easy? </h2>
+	       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
+	       		<br/> Constantly want it? 
+	       		<br/> Okay. 
+	       		<br/> Forget about sleep and health Nerven. 
+	       		<br /> =) 
+	       	</p> 
+	    	<div 
+    			style="background: 
+    			rgba(248, 248, 255, 0); 
+    			padding: 15;
+    			padding-left: 35;  
+    			width: 37%;  
+				margin: 5px; 
+				border: 2px solid #191970;">
+	    		<p>
+	    			<b> At first catch obligatory steps: </b>
+		       		<ol> 
+		           		<li> Sit down and breathe deeply. </li>
+		           		<li> This is your last chance. 
+		           			<a href="#warning"> Don't do it!!</a> </li>
+		           		<li> Turn on the laptop.</li>
+		           		<li><small> Cry. </small></li>
+		           		<li> Improvise. </li>
+		       		</ol>
+		       	</p>
+	     	</div>
+			<h2>You are ready.</h2>
 			<p>
 				<a href="https://tproger.ru/news/">
-					<img src="coder.png" width=30% alt="Programmer" title="typical programmer"/></a>
-				<br /> Go to learn more here >> <a href="http://htmlbook.at.ua/"> htmlbook.at.ua</a>
+					<img src="coder.png" width=30% alt="Programmer" title=Gh"you" />
+				</a>
+				<br /> Go to learn more here >> 
+				<a href="http://htmlbook.at.ua/"> htmlbook.at.ua </a>
 				<br /> And, of course you can write me personaly >>
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>	
-				<br /><br /><h3> The pros and cons of being a programmer:</h3>
-				<table border="2" width="70%" style="background-color: rgba(210, 105, 30, 0.15)" >
-					<tr style="background-color: rgba(210, 105, 30, 0.5)" align="center" valign="middle">
+				<br /><br /><h3> The pros and cons of being a programmer: </h3>
+				<table id="warning" 
+						border="2" 
+						width="70%" 
+						style="background-color: rgba(210, 105, 30, 0.15)" >
+					<tr style="background-color: rgba(210, 105, 30, 0.5)" 	  align="center" 
+						valign="middle">
 						<td><b> Pros </b></td>
 						<td><b> Cons </b></td>
 						<td><b> Conclusion </b></td>
 					</tr>
-					<tr align="center" valign="middle">
+					<tr align="center" 
+						valign="middle">
 						<td> You're a clever person </td>
-						<td><i> You're <a href="geek.png"> geek </a> </i></td>
+						<td><i> You're 
+							<a href="geek.png"> geek </a> </i></td>
 						<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
 					</tr>
-					<tr align="center" valign="middle">
+					<tr align="center" 
+						valign="middle">
 						<td> You do magic </td>
 						<td><i> You ate last time last week </i></td>
 					</tr>
-					<tr align="center" valign="middle">
+					<tr align="center" 
+						valign="middle">
 						<td> You have a big salary </td>
 						<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
 						<td><i> Be a doctor is not so bed) </i></td>
@@ -74,8 +80,8 @@
 						<td> You know that you're on the right path ^^ </td>
 					</tr>
 				</table>
-				</p>
-			</div>
-        </body> 
+			</p>
+		</div>
+    </body> 
 
 </html>
