fixed minor bugs introduced by previous commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<h2>You are ready.</h2>
 			<p>
 				<a href="https://tproger.ru/news/">
-					<img src="coder.png" width=30% alt="Programmer" title=Gh"you" />
+					<img src="coder.png" width=30% alt="Programmer" title="you" />
 				</a>
 				<br /> Go to learn more here >> 
 				<a href="http://htmlbook.at.ua/"> htmlbook.at.ua </a>
