text and background changes added

--- a/index.html
+++ b/index.html
@@ -7,81 +7,79 @@
        	<style type="text/css"> </style>
     </head> 
 
-    <body>
-    	<div> 
-	      	<h1> Want to become a programmer? </h2>
-	       	<h1> Think it's easy? </h2>
-	       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
-	       		<br/> Constantly want it? 
-	       		<br/> Okay. 
-	       		<br/> Forget about sleep and health Nerven. 
-	       		<br /> =) 
-	       	</p> 
-	    	<div 
-    			style="background: 
-    			rgba(248, 248, 255, 0); 
-    			padding: 15;
-    			padding-left: 35;  
-    			width: 37%;  
-				margin: 5px; 
-				border: 2px solid #191970;">
-	    		<p>
-	    			<b> At first catch obligatory steps: </b>
-		       		<ol> 
-		           		<li> Sit down and breathe deeply. </li>
-		           		<li> This is your last chance. 
-		           			<a href="#warning"> Don't do it!!</a> </li>
-		           		<li> Turn on the laptop.</li>
-		           		<li><small> Cry. </small></li>
-		           		<li> Improvise. </li>
-		       		</ol>
-		       	</p>
-	     	</div>
-			<h2>You are ready.</h2>
-			<p>
-				<a href="https://tproger.ru/news/">
-					<img src="coder.png" width=30% alt="Programmer" title="you" />
-				</a>
-				<br /> Go to learn more here >> 
+<body>
+	<div> 
+      	<h1> Want to become a programmer? </h1>
+       	<h1> Think it's easy? </h1>
+       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
+       		<br/> Constantly want it? 
+       		<br/> Okay. 
+       		<br/> Forget about sleep and health Nerven. 
+       		<br /> =) 
+       	</p>  
+       	<br /><h2> Who is programmer? </h2>
+       	<p> 
+       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
+    	</p>
+    	<div 
+			style="background: 
+			rgba(248, 248, 255, 0); 
+			padding: 15;
+			padding-left: 35;  
+			width: 40%;  
+			margin: 20px; 
+			margin-left: 5px;
+			border: 2px solid #191970;">
+    		<h3> At first catch obligatory steps: </h3>
+	       	<ol> 
+           		<li> Sit down and breathe deeply. </li>
+           		<li> This is your last chance. 
+           			<a href="#warning"> Don't do it!!</a> </li>
+           		<li> Turn on the laptop.</li>
+           		<li><small> Cry. </small></li>
+           		<li> Improvise. </li>
+       		</ol>
+     	</div>
+		<h2 style="text-decoration: line-through"> You are ready.</h2>
+		<a href="https://tproger.ru/news/">
+				<img src="coder.png" width=30% alt="Programmer" title="you" />
+		</a>
+		<p>
+			<br /> Go to learn more here >> 
 				<a href="http://htmlbook.at.ua/"> htmlbook.at.ua </a>
-				<br /> And, of course you can write me personaly >>
-					<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>	
-				<br /><br /><h3> The pros and cons of being a programmer: </h3>
-				<table id="warning" 
-						border="2" 
-						width="70%" 
-						style="background-color: rgba(210, 105, 30, 0.15)" >
-					<tr style="background-color: rgba(210, 105, 30, 0.5)" 	  align="center" 
-						valign="middle">
-						<td><b> Pros </b></td>
-						<td><b> Cons </b></td>
-						<td><b> Conclusion </b></td>
-					</tr>
-					<tr align="center" 
-						valign="middle">
-						<td> You're a clever person </td>
-						<td><i> You're 
-							<a href="geek.png"> geek </a> </i></td>
-						<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
-					</tr>
-					<tr align="center" 
-						valign="middle">
-						<td> You do magic </td>
-						<td><i> You ate last time last week </i></td>
-					</tr>
-					<tr align="center" 
-						valign="middle">
-						<td> You have a big salary </td>
-						<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
-						<td><i> Be a doctor is not so bed) </i></td>
-					</tr>
-					<tr align="center" valign="middle">
-						<td colspan="2"> You're unique </td>
-						<td> You know that you're on the right path ^^ </td>
-					</tr>
-				</table>
-			</p>
-		</div>
-    </body> 
+			<br /> And, of course you can write me personaly >>
+				<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
+		</p>	
+		<br><h3><p> The pros and cons of being a programmer: </p></h3>
+		<table id="warning"
+				border="2" 
+				width="70%" >
+			<tr>
+				<th> Pros </th>
+				<th> Cons </th>
+				<th> Conclusion </th>
+			</tr>
+			<tr>
+				<td> You're a clever person </td>
+				<td><i> You're 
+					<a href="geek.png"> geek </a> </i></td>
+				<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
+			</tr>
+			<tr>
+				<td> You do magic </td>
+				<td><i> You ate last time last week </i></td>
+			</tr>
+			<tr>
+				<td> You have a big salary </td>
+				<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+				<td><i> Be a doctor is not so bed) </i></td>
+			</tr>
+			<tr>
+				<td colspan="2"> You're unique </td>
+				<td> You know that you're on the right path ^^ </td>
+			</tr>
+		</table>
+	</div>
+</body> 
 
 </html>
