small visual changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      	</div>
 		<h2 style="text-decoration: line-through"> You are ready.</h2>
 		<a href="https://tproger.ru/news/">
-				<img src="coder.png" width=30% alt="Programmer" title="you" />
+				<br /><img src="dev.png" width=40% alt="Programmer" title="you" style="padding-left: 30%;"/>
 		</a>
 		<p>
 			<br /> Go to learn more here >> 
