--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
            		<li> Improvise. </li>
        		</ol>
      	</div>
-		<h2 style="text-decoration: line-through"> You are ready.</h2>
+		<h2> You are ready.</h2>
 		<a href="https://tproger.ru/news/">
 				<br /><img src="dev.png" width=40% alt="Programmer" title="you" style="padding-left: 30%;"/>
 		</a>
 		<p>
 			<br /> Go to learn more here >> 
-				<a href="http://htmlbook.at.ua/"> htmlbook.at.ua </a>
+				<a href="http://htmlbook.at.ua/"><i> htmlbook.at.ua </i></a>
 			<br /> And, of course you can write me personaly >>
-				<a href="mailto:yulyawhite15@gmail.com" title="my gmail"> yulyawhite15@gmail.com </a>
+				<a href="mailto:yulyawhite15@gmail.com" title="my gmail"><i> yulyawhite15@gmail.com </i></a>
 		</p>	
 		<br><h3><p> The pros and cons of being a programmer: </p></h3>
 		<table id="warning"
