id and classes added

--- a/index.html
+++ b/index.html
@@ -7,79 +7,69 @@
        	<style type="text/css"> </style>
     </head> 
 
-<body>
-	<div> 
-      	<h1> Want to become a programmer? </h1>
-       	<h1> Think it's easy? </h1>
-       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
-       		<br/> Constantly want it? 
-       		<br/> Okay. 
-       		<br/> Forget about sleep and health Nerven. 
-       		<br /> =) 
-       	</p>  
-       	<br /><h2> Who is programmer? </h2>
-       	<p> 
-       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
-    	</p>
-    	<div 
-			style="background: 
-			rgba(248, 248, 255, 0); 
-			padding: 15;
-			padding-left: 35;  
-			width: 40%;  
-			margin: 20px; 
-			margin-left: 5px;
-			border: 2px solid #191970;">
-    		<h3> At first catch obligatory steps: </h3>
-	       	<ol> 
-           		<li> Sit down and breathe deeply. </li>
-           		<li> This is your last chance. 
-           			<a href="#warning"> Don't do it!!</a> </li>
-           		<li> Turn on the laptop.</li>
-           		<li><small> Cry. </small></li>
-           		<li> Improvise. </li>
-       		</ol>
-     	</div>
-		<h2> You are ready.</h2>
-		<a href="https://tproger.ru/news/">
-				<br /><img src="dev.png" width=40% alt="Programmer" title="you" style="padding-left: 30%;"/>
-		</a>
-		<p>
-			<br /> Go to learn more here >> 
-				<a href="http://htmlbook.at.ua/"><i> htmlbook.at.ua </i></a>
-			<br /> And, of course you can write me personaly >>
-				<a href="mailto:yulyawhite15@gmail.com" title="my gmail"><i> yulyawhite15@gmail.com </i></a>
-		</p>	
-		<br><h3><p> The pros and cons of being a programmer: </p></h3>
-		<table id="warning"
-				border="2" 
-				width="70%" >
-			<tr>
-				<th> Pros </th>
-				<th> Cons </th>
-				<th> Conclusion </th>
-			</tr>
-			<tr>
-				<td> You're a clever person </td>
-				<td><i> You're 
-					<a href="geek.png"> geek </a> </i></td>
-				<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
-			</tr>
-			<tr>
-				<td> You do magic </td>
-				<td><i> You ate last time last week </i></td>
-			</tr>
-			<tr>
-				<td> You have a big salary </td>
-				<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
-				<td><i> Be a doctor is not so bed) </i></td>
-			</tr>
-			<tr>
-				<td colspan="2"> You're unique </td>
-				<td> You know that you're on the right path ^^ </td>
-			</tr>
-		</table>
-	</div>
-</body> 
+	<body>
+		<div> 
+	      	<h1> Want to become a programmer? </h1>
+	       	<h1> Think it's easy? </h1>
+	       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
+	       		<br/> Constantly want it? 
+	       		<br/> Okay. 
+	       		<br/> Forget about sleep and health Nerven. 
+	       		<br /> =) 
+	       	</p>  
+	       	<br /><h2> Who is programmer? </h2>
+	       	<p> 
+	       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
+	    	</p>
+	    	<div id="text-in-frame">
+	    		<h3> At first catch obligatory steps: </h3>
+		       	<ol> 
+	           		<li> Sit down and breathe deeply. </li>
+	           		<li> This is your last chance. 
+	           			<a href="#warning"> Don't do it!!</a> </li>
+	           		<li> Turn on the laptop.</li>
+	           		<li><small> Cry. </small></li>
+	           		<li> Improvise. </li>
+	       		</ol>
+	     	</div>
+			<h2 class="sayings"> You are ready.</h2>
+			<a href="https://tproger.ru/news/">
+					<img src="dev.png" alt="Programmer" title="you" id="image-programmer"/>
+			</a>
+			<p>
+				<br /> Go to learn more here >> 
+					<a href="http://htmlbook.at.ua/" class="external-links"><i> htmlbook.at.ua </i></a>
+				<br /> And, of course you can write me personaly >>
+					<a href="mailto:yulyawhite15@gmail.com" title="my gmail" class="external-links"><i> yulyawhite15@gmail.com </i></a>
+			</p>	
+			<br><h2><p> The pros and cons of being a programmer: </p></h2>
+			<table id="warning">
+				<tr>
+					<th> Pros </th>
+					<th> Cons </th>
+					<th> Conclusion </th>
+				</tr>
+				<tr>
+					<td> You're a clever person </td>
+					<td><i> You're 
+						<a href="geek.png"> geek </a> </i></td>
+					<td rowspan="2"> You cry for joy or sum, but always do somethings </td>
+				</tr>
+				<tr>
+					<td> You do magic </td>
+					<td><i> You ate last time last week </i></td>
+				</tr>
+				<tr>
+					<td> You have a big salary </td>
+					<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
+					<td><i> Be a doctor is not so bed) </i></td>
+				</tr>
+				<tr>
+					<td colspan="2"> You're unique </td>
+					<td> You know that you're on the right path ^^ </td>
+				</tr>
+			</table>
+		</div>
+	</body> 
 
 </html>
