--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
 		       	<ol> 
 	           		<li> Sit down and breathe deeply. </li>
 	           		<li> This is your last chance. 
-	           			<a href="#warning"> Don't do it!!</a> </li>
+	           			<a href="#pros-cons"> Don't do it!!</a> </li>
 	           		<li> Turn on the laptop.</li>
 	           		<li><small> Cry. </small></li>
 	           		<li> Improvise. </li>
 	       		</ol>
 	     	</div>
 			<h2 class="sayings"> You are ready.</h2>
-			<a href="https://tproger.ru/news/">
-					<img src="dev.png" alt="Programmer" title="you" id="image-programmer"/>
-			</a>
+			<figure class="img-center">	
+				<a href="https://tproger.ru/news/">
+					<img class="image-programmer" src="dev.png" alt="Programmer" title="you" />
+				</a>
+			</figure> 
 			<p>
 				<br /> Go to learn more here >> 
 					<a href="http://htmlbook.at.ua/" class="external-links"><i> htmlbook.at.ua </i></a>
@@ -43,7 +45,7 @@
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail" class="external-links"><i> yulyawhite15@gmail.com </i></a>
 			</p>	
 			<br><h2><p> The pros and cons of being a programmer: </p></h2>
-			<table id="warning">
+			<table id="pros-cons">
 				<tr>
 					<th> Pros </th>
 					<th> Cons </th>
@@ -61,12 +63,12 @@
 				</tr>
 				<tr>
 					<td> You have a big salary </td>
-					<td><i>  Alarm! Everything fell!! (4 a.m.) </i></td>
-					<td><i> Be a doctor is not so bed) </i></td>
+					<td><i>  Alarm! Everything fell (4 a.m.) </i></td>
+					<td><i> Be a manager is <span class="outline">not</span> so boring)</i></td>
 				</tr>
 				<tr>
 					<td colspan="2"> You're unique </td>
-					<td> You know that you're on the right path ^^ </td>
+					<td> You know that you're on the right path</td>
 				</tr>
 			</table>
 		</div>
