--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     </head> 
 
 	<body>
-		<div> 
-	      	<h1> Want to become a programmer? </h1>
-	       	<h1> Think it's easy? </h1>
+		<div class="page"> 
+	      	<h1 class="article"> Want to become a programmer? </h1>
+	       	<h1 class="article"> Think it's easy? </h1>
 	       	<p><br /> Let me tell you, it's a very hard way with many drops and eating in 2 a.m. 
 	       		<br/> Constantly want it? 
 	       		<br/> Okay. 
 	       		<br/> Forget about sleep and health Nerven. 
 	       		<br /> =) 
 	       	</p>  
-	       	<br /><h2> Who is programmer? </h2>
+	       	<br /><h2 class="item"> Who is programmer? </h2>
 	       	<p> 
 	       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
 	    	</p>
 	    	<div id="text-in-frame">
-	    		<h3> At first catch obligatory steps: </h3>
+	    		<h3 class="mini-item"> At first catch obligatory steps: </h3>
 		       	<ol> 
 	           		<li> Sit down and breathe deeply. </li>
 	           		<li> This is your last chance. 
@@ -44,7 +44,7 @@
 				<br /> And, of course you can write me personaly >>
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail" class="external-links"><i> yulyawhite15@gmail.com </i></a>
 			</p>	
-			<br><h2><p> The pros and cons of being a programmer: </p></h2>
+			<br><h2 class="item"> The pros and cons of being a programmer: </h2>
 			<table id="pros-cons">
 				<tr>
 					<th> Pros </th>
@@ -63,7 +63,11 @@
 				</tr>
 				<tr>
 					<td> You have a big salary </td>
-					<td><i>  Alarm! Everything fell (4 a.m.) </i></td>
+					<td>
+						<i>  Alarm! Everything fell!! 
+							<br />(4 a.m.) 
+						</i>
+					</td>
 					<td><i> Be a manager is <span class="outline">not</span> so boring)</i></td>
 				</tr>
 				<tr>
@@ -71,6 +75,20 @@
 					<td> You know that you're on the right path</td>
 				</tr>
 			</table>
+			<br /><h2 class="item"> A little bit of history. </h2>
+			<figure class="rightimg">
+				<img src="ada.png" alt="Ada Lovelace" id="ada-lovelace">
+				<h4 class="writing">Ada Lovelace
+					<br />(1815-1852)
+				</h4>
+			</figure>
+			<p>
+				Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
+			</p>
+			<p>
+				However, the first computer program is generally dated to 1843, when mathematician 
+				<a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
+			</p>
 		</div>
 	</body> 
 
