--- a/index.html
+++ b/index.html
@@ -76,12 +76,22 @@
 				</tr>
 			</table>
 			<br /><h2 class="item"> A little bit of history. </h2>
-			<figure class="rightimg">
-				<img src="ada.png" alt="Ada Lovelace" id="ada-lovelace">
-				<h4 class="writing">Ada Lovelace
-					<br />(1815-1852)
-				</h4>
-			</figure>
+			<div>
+				<figure class="rightimg">
+					<img src="charles.png" alt="Charles Babbage" class="portrait">
+					<h4 class="writing">
+						Charles 
+						<br />Babbage
+						<br />(1791-1871)
+					</h4>
+				</figure>
+				<figure class="rightimg">
+					<img src="ada.png" alt="Ada Lovelace" class="portrait">
+					<h4 class="writing">Ada Lovelace
+						<br />(1815-1852)
+					</h4>
+				</figure>
+			</div>
 			<p>
 				Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
 			</p>
