--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 
     <head> 
@@ -17,10 +16,13 @@
 	       		<br/> Forget about sleep and health Nerven. 
 	       		<br /> =) 
 	       	</p>  
-	       	<br /><h2 class="item"> Who is programmer? </h2>
-	       	<p> 
-	       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
-	    	</p>
+		    <div>
+		       	<br /><h2 class="item"> Who is programmer? </h2>
+		       	<img id="pac1" src="pac1.png" alt="Pacman"/>
+		       	<p class="slice">  
+		       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
+		    	</p>
+	    	</div>
 	    	<div id="text-in-frame">
 	    		<h3 class="mini-item"> At first catch obligatory steps: </h3>
 		       	<ol> 
@@ -43,7 +45,7 @@
 					<a href="http://htmlbook.at.ua/" class="external-links"><i> htmlbook.at.ua </i></a>
 				<br /> And, of course you can write me personaly >>
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail" class="external-links"><i> yulyawhite15@gmail.com </i></a>
-			</p>	
+			</p>
 			<br><h2 class="item"> The pros and cons of being a programmer: </h2>
 			<table id="pros-cons">
 				<tr>
