fixed minor bugs introduced by previous commit

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 					<td> You know that you're on the right path</td>
 				</tr>
 			</table>
-			<br /><h2 class="item"> A little bit of history. </h2>
-			<div>
+			<div class="footer clearfix">
+				<br /><h2 class="item"> A little bit of history. </h2>
 				<figure class="rightimg">
 					<img src="charles.png" alt="Charles Babbage" class="portrait">
 					<h4 class="writing">
@@ -93,14 +93,14 @@
 						<br />(1815-1852)
 					</h4>
 				</figure>
-			</div>
-			<p>
-				Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
-			</p>
-			<p>
-				However, the first computer program is generally dated to 1843, when mathematician 
-				<a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
-			</p>
+				<p>
+					Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
+				</p>
+				<p>
+					However, the first computer program is generally dated to 1843, when mathematician 
+					<a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
+				</p>
+			</div>	
 		</div>
 	</body> 
 
