fix display bugs

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	       		<br /> =) 
 	       	</p>  
 		    <div>
-		       	<br /><h2 class="item"> Who is programmer? </h2>
-		       	<img id="pac1" src="pac1.png" alt="Pacman"/>
+		       	<h2 class="item"> Who is programmer? </h2>
+		       	<img id="primar" src="pac1.png" alt="Pacman"/>
 		       	<p class="slice">  
 		       		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist who writes code for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
 		    	</p>
@@ -46,7 +46,7 @@
 				<br /> And, of course you can write me personaly >>
 					<a href="mailto:yulyawhite15@gmail.com" title="my gmail" class="external-links"><i> yulyawhite15@gmail.com </i></a>
 			</p>
-			<br><h2 class="item"> The pros and cons of being a programmer: </h2>
+			<h2 class="item"> The pros and cons of being a programmer: </h2>
 			<table id="pros-cons">
 				<tr>
 					<th> Pros </th>
@@ -77,22 +77,24 @@
 					<td> You know that you're on the right path</td>
 				</tr>
 			</table>
-			<div class="footer clearfix">
-				<br /><h2 class="item"> A little bit of history. </h2>
-				<figure class="rightimg">
-					<img src="charles.png" alt="Charles Babbage" class="portrait">
-					<h4 class="writing">
-						Charles 
-						<br />Babbage
-						<br />(1791-1871)
-					</h4>
-				</figure>
-				<figure class="rightimg">
-					<img src="ada.png" alt="Ada Lovelace" class="portrait">
-					<h4 class="writing">Ada Lovelace
-						<br />(1815-1852)
-					</h4>
-				</figure>
+			<div class="continue-page">
+				<h2 class="item"> A little bit of history. </h2>
+				<div id="block-history">
+					<figure class="rightimg">
+						<img src="charles.png" alt="Charles Babbage" class="portrait">
+						<figcaption class="writing" id="charles-caption">
+							Charles
+							<br />Babbage
+							<br />(1791-1871)
+						</figcaption>
+					</figure>	
+					<figure class="rightimg">
+						<img src="ada.png" alt="Ada Lovelace" class="portrait">
+						<figcaption class="writing" id="ada-caption">Ada Lovelace
+							<br />(1815-1852)
+						</figcaption>
+					</figure>
+				</div>
 				<p>
 					Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
 				</p>
@@ -100,7 +102,7 @@
 					However, the first computer program is generally dated to 1843, when mathematician 
 					<a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
 				</p>
-			</div>	
+			</div>
 		</div>
 	</body> 
 
