--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
       <nav class="nav-page">
         <figure class="navbar-logo">
           <a href="index.html">
-            <img class="img-logo" src="pictures/logo-avocado.png" alt="logo">
+            <img class="img-logo" src="pictures/cloud.png" alt="logo">
           </a>
         </figure>
         <ul class="menu">
@@ -24,6 +24,10 @@
         </ul>
       </nav>  
     </header>
+
+    <footer>
+      ©juliajulyy, 2019 
+    </footer>
     
   </body>
 </html>
