--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<nav class="nav-page">
         <figure class="navbar-logo">
           <a href="index.html">
-            <img class="img-logo" src="pictures/logo-avocado.png" alt="logo">
+            <img class="img-logo" src="pictures/cloud.png" alt="logo">
           </a>
         </figure>
         <ul class="menu">
@@ -24,6 +24,25 @@
         </ul>
  			</nav>	
   	</header>
+
+    <main>
+      <section>
+        <h1 class="article">
+          Want to become a programmer? 
+          <br /> Think it's easy? 
+        </h1>
+        <p><br> Let me tell you, it's a very hard way with many tear and eating in 2 a.m. 
+          <br> Constantly want it? 
+          <br> Okay. 
+          <br> Forget about sleep and health Nerven. 
+          <br> =) 
+        </p> 
+      </section>
+    </main>
+
+    <footer>
+      ©juliajulyy, 2019 
+    </footer>
 
   </body>
 </html>
