--- a/begining.html
+++ b/begining.html
@@ -13,7 +13,7 @@
 			<nav class="nav-page">
         <figure class="navbar-logo">
           <a href="index.html">
-            <img class="img-logo" src="pictures/logo-avocado.png" alt="logo">
+            <img class="img-logo" src="pictures/cloud.png" alt="logo">
           </a>
         </figure>
         <ul class="menu">
@@ -25,19 +25,7 @@
  			</nav>	
   	</header>
 
-		<main class="page">
-			<section>
-	  		<h1 class="article">
-	  			Want to become a programmer? 
-	  			<br /> Think it's easy? 
-	  		</h1>
-	     	<p><br> Let me tell you, it's a very hard way with many tear and eating in 2 a.m. 
-	     		<br> Constantly want it? 
-	     		<br> Okay. 
-	     		<br> Forget about sleep and health Nerven. 
-	     		<br> =) 
-	     	</p> 
-	    </section>
+		<main>
 	    <section> 
        	<h2 class="item"> Who is programmer? </h2>
        	<img id="primar" src="pictures/pac1.png" alt="Pacman"/>
@@ -104,53 +92,6 @@
 						</tr>
 					</tbody>
 				</table>
-			</section>
-			<section class="continue-page">	
-				<h2 class="item"> A little bit of history. </h2>
-				<div id="block-history">
-					<figure class="rightimg">
-						<img src="pictures/charles.png" alt="Charles Babbage" class="portrait">
-						<figcaption class="writing" id="charles-caption">
-							Charles
-							<br>Babbage
-							<br>(1791-1871)
-						</figcaption>
-					</figure>	
-					<figure class="rightimg">
-						<img src="pictures/ada.png" alt="Ada Lovelace" class="portrait">
-						<figcaption class="writing" id="ada-caption">Ada Lovelace
-							<br>(1815-1852)
-						</figcaption>
-					</figure>
-				</div>
-				<p>
-					Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
-				</p>
-				<p>
-					However, <em>the first computer program is generally dated to 1843</em>, when mathematician 
-					<a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
-				</p>
-			</section>
-			<section>
-				<h2 class="item">Some terms, that might be useful.</h2>
-				<dl>
-					<dt>Database</dt>
-					<dd>
-						is an organized collection of data, generally stored and accessed electronically from a computer system.
-					</dd>
-				  <dt>Software</dt>
-			    <dd>
-			    	is a collection of data or computer instructions that tell the computer how to work.
-			    </dd>
-				  <dt>Web page</dt>
-				  <dd>
-				   	is a document that is suitable for the World Wide Web and web browsers.
-				  </dd>
-				  <dt>HTML</dt>
-				  <dd>
-				  	(Hypertext Markup Language) is the standard markup language for creating web pages and web applications. 
-				  </dd>
-				</dl>
 			</section>
 			<section>
 				<h2 class="item">Quotes about programming.</h2>
