--- a/history.html
+++ b/history.html
@@ -9,11 +9,11 @@
 
 	<body>
 
-		  <header>
+		<header>
       <nav class="nav-page">
         <figure class="navbar-logo">
           <a href="index.html">
-            <img class="img-logo" src="pictures/logo-avocado.png" alt="logo">
+            <img class="img-logo" src="pictures/cloud.png" alt="logo">
           </a>
         </figure>
         <ul class="menu">
@@ -24,6 +24,39 @@
         </ul>
       </nav>  
     </header>
+
+    <main>
+      <section class="continue-page"> 
+        <h2 class="item"> A little bit of history. </h2>
+        <div id="block-history">
+          <figure class="rightimg">
+            <img src="pictures/charles.png" alt="Charles Babbage" class="portrait">
+            <figcaption class="writing" id="charles-caption">
+              Charles
+              <br>Babbage
+              <br>(1791-1871)
+            </figcaption>
+          </figure> 
+          <figure class="rightimg">
+            <img src="pictures/ada.png" alt="Ada Lovelace" class="portrait">
+            <figcaption class="writing" id="ada-caption">Ada Lovelace
+              <br>(1815-1852)
+            </figcaption>
+          </figure>
+        </div>
+        <p>
+          Programmable devices have existed at least as far back as 1206 AD, when the automata of Al-Jazari were programmable, via pegs and cams, to play various rhythms and drum patterns; and the 1801 Jacquard loom could produce entirely different weaves by changing the "program" - a series of pasteboard cards with holes punched in them.
+        </p>
+        <p>
+          However, <em>the first computer program is generally dated to 1843</em>, when mathematician 
+          <a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a> published an algorithm to calculate a sequence of Bernoulli numbers, intended to be carried out by <a href="https://en.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>'s Analytical Engine. Women would continue to dominate the field of computer programming until the mid 1960s.
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      ©juliajulyy, 2019 
+    </footer>
 
   </body>
 </html>
