added content for the feedback page

--- a/begining.html
+++ b/begining.html
@@ -9,7 +9,7 @@
 
 	<body>
 
-			<header>
+		<header>
 			<nav class="nav-page">
         <figure class="navbar-logo">
           <a href="index.html">
@@ -33,7 +33,7 @@
        		A programmer, developer, dev, coder, or software engineer is a person who creates computer software. The term computer programmer can refer to a specialist in one area of computers or to a generalist <strong>who writes code</strong> for many kinds of software. One who practices or professes a formal approach to programming may also be known as a programmer analyst. 
 	    	</p>	
 	    	<div id="text-in-frame">
-	    		<h3 class="mini-item"> At first catch obligatory steps: </h3>
+	    		<h3 class="mini-item-frame"> At first catch obligatory steps: </h3>
 		       	<ol> 
            		<li> Sit down and breathe deeply. </li>
            		<li> This is your last chance. 
@@ -44,7 +44,7 @@
 	       		</ol>
 	     	</div>
 				<h2 class="sayings"> You are ready.</h2>
-				<figure class="img-center">	
+				<figure class="center">	
 					<a href="https://tproger.ru/news/">
 						<img id="image-programmer" src="pictures/dev.png" alt="Programmer" title="you" />
 					</a>
