footer content added

--- a/begining.html
+++ b/begining.html
@@ -118,9 +118,17 @@
 			</section>
 		</main>
 		
-		<footer>
-			©juliajulyy, 2019 
-		</footer>
+    <footer>
+      <p class="autor-caption">  
+        Made by ©juliajulyy, 2019.
+      </p> 
+      <p class="contact"> Contact with me: </p>
+      <figure class="contact-icon"> 
+        <img  id="github-icon" src="pictures/github-icon.png" alt="github">
+        <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
+        <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+      </figure>
+    </footer>
 
 	</body>
 
