--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head> 
    	<title> Programmer's page </title>
    	<link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="new.css" />
    	<style type="text/css"> </style>
   </head> 
 
@@ -41,7 +42,15 @@
     </main>
 
     <footer>
-      ©juliajulyy, 2019 
+      <p class="autor-caption">  
+        Made by ©juliajulyy, 2019.
+      </p> 
+      <p class="contact"> Contact with me: </p>
+      <figure class="contact-icon"> 
+        <img  id="github-icon" src="pictures/github-icon.png" alt="github">
+        <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
+        <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+      </figure>
     </footer>
 
   </body>
