--- a/feedback.html
+++ b/feedback.html
@@ -63,7 +63,15 @@
     </main>
 
     <footer>
-      ©juliajulyy, 2019 
+      <p class="autor-caption">  
+        Made by ©juliajulyy, 2019.
+      </p> 
+      <p class="contact"> Contact with me: </p>
+      <figure class="contact-icon"> 
+        <img  id="github-icon" src="pictures/github-icon.png" alt="github">
+        <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
+        <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+      </figure>
     </footer>
     
   </body>
