styles for footer added

--- a/answer.html
+++ b/answer.html
@@ -29,8 +29,22 @@
       
     </main>
 
-    <footer>
-      ©juliajulyy, 2019 
+    <footer class="small-page">
+      <p class="autor-caption">  
+        Made by ©juliajulyy, 2019
+      </p> 
+      <p class="contact"> Contact with me: </p>
+      <figure class="contact-icon"> 
+        <a class="contact-icon" href="https://github.com/juliajulyy">
+          <img  id="github-icon" src="pictures/github-icon.png" alt="github">
+        </a>
+        <a class="contact-icon" href="https://www.facebook.com/profile.php?id=100016107456176">
+          <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
+        </a>
+        <a class="contact-icon" href="https://twitter.com/townbluebird">
+          <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+        </a>     
+      </figure>
     </footer>
     
   </body>
