--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  			</nav>	
   	</header>
 
-    <main>
+    <main class="center-content">
       <section>
         <h1 class="article">
           Want to become a programmer? 
@@ -36,20 +36,26 @@
           <br> Constantly want it? 
           <br> Okay. 
           <br> Forget about sleep and health Nerven. 
-          <br> =) 
+          <br> =)
         </p> 
       </section>
     </main>
 
-    <footer>
+    <footer class="small-page">
       <p class="autor-caption">  
-        Made by ©juliajulyy, 2019.
+        Made by ©juliajulyy, 2019
       </p> 
       <p class="contact"> Contact with me: </p>
       <figure class="contact-icon"> 
-        <img  id="github-icon" src="pictures/github-icon.png" alt="github">
-        <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
-        <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+        <a class="contact-icon" href="https://github.com/juliajulyy">
+          <img  id="github-icon" src="pictures/github-icon.png" alt="github">
+        </a>
+        <a class="contact-icon" href="https://www.facebook.com/profile.php?id=100016107456176">
+          <img class="small-icon" src="pictures/facebook-icon.png" alt="facebook">
+        </a>
+        <a class="contact-icon" href="https://twitter.com/townbluebird">
+          <img class="small-icon" src="pictures/twitter-icon.png" alt="twitter">
+        </a>     
       </figure>
     </footer>
 
